8292602: ZGC: C2 late barrier analysis uses invalid dominator information

Backport-of: eec992c6b0ac77d08478d852a80c9470418d925d